# cyber-physical-systems

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  code-of-conduct.md  docker-compose.yml  generate-diagrams.sh  run.sh
cpp-opencv/: Dockerfile
data/config/: sensor_whitelist.txt
data/training_data/video-150001/: cones-video-4.csv
diagrams/: component-diagram.d2
llm-dialogues/: ChatGPT.txt  regex.txt
machine-learning/: .gitignore  Dockerfile  README.md  docker-compose.yml
machine-learning/src/: preprocessor.py  scorer.py  script.py
opencv-service/: CMakeLists.txt  Dockerfile  build-onnxruntime-arm7.dockerfile
opencv-service/lib/models/: clr.onnx
opencv-service/lib/onnxruntime/: README.md
opencv-service/lib/onnxruntime/lib/arm32/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  PROJECT_CONFIG_FILE  cmake_install.cmake  compile_commands.json  generated_source.c  onnxruntime.lds  onnxruntimeConfigVersion.cmake  onnxruntime_config.h  onnxruntime_customopregistration_test  onnxruntime_global_thread_pools_test  onnxruntime_logging_apis_test  onnxruntime_mlas_q4dq  onnxruntime_mlas_test  onnxruntime_perf_test  onnxruntime_shared_lib_test  requirements.txt  tml.pb.cc  tml.pb.h
opencv-service/src/: cone-detector.cpp  cone-detector.hpp  current-performance-checker.hpp  machine-learning.cpp  machine-learning.hpp  opencv-service.cpp
opencv-service/tests/: TestDummyTest.cpp
src/: PrimeChecker.cpp  helloworld.cpp
src/tests/: TestPrimeChecker.cpp
